<resources>
    <string name="app_name">FlashAndSound</string>
    <string name="settings">settings</string>
    <string name="exit">exit</string>
    <string name="FLASH">FLASH</string>
    <string name="SOUND">SOUND</string>
    <string name="BUTTON">Everything Off</string>
    <string name="Menu1">IP Address</string>
    <string name="Menu2">Port Number</string>
    <string name="Okiedokie">OK</string>
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="ok">OK</string>
    <string name="ok2">OK</string>
    <string name="frequency">frequency</string>
    <string name="frequency_value">1000</string>
    <string name="MenuFrequency">1000 ms</string>
    <string name="Auto">Auto mode</string>
    <string name="Manual">Manual mode</string>
    <string name="Manualsub">subscribe</string>
    <string name="manualunsub">unsubscribe</string>
</resources>
